# JustAMailClient

./: .gitignore  Cargo.toml  README.md  byebyte.py  nettest.sh  reset_db.sh  yea.json
.sqlx/: query-a3d974b3fa68fb95ebfc4d7e3f081690d89d6eb6b5348c966af784ef34dee803.json
migrations/: 20260625083336_create_accounts_table.sql  20260625083416_create_messages_table.sql  20260625083436_create_requests_table.sql  20260625083559_create_mailboxes_table.sql  20260628081824_account_seeder.sql.sql
src/: consts.rs  funcs.rs  imap.rs  init.rs  main.rs  models.rs  unused.rs
src/db/scripts/: accounts.sql  mailboxes.sql  messages.sql  requests.sql
src/fetch/: imap.rs
src/gui/: mod.rs
src/net/: mod.rs  structure.rs
src/net/fetch/: imap.rs  mod.rs
src/net/push/: mod.rs  smtp.rs
src/push/: smtp.rs
src/srv/: mod.rs
src/srv/db/: mod.rs  sql.rs  types.rs
src/ui/: mod.rs
