[package]
name = "JustAMailClient"
version = "0.1.0"
edition = "2024"

[dependencies]
async-imap = "0.11.2"
async-native-tls = { version = "0.6.0", default-features = false, features = [ "runtime-tokio" ] }
bitflags = "2.13.0"
dotenvy = "0.15.7"
futures = "0.3.32"
mailparse = "0.16.1"
rfc2047-decoder = "1.1.2"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat"] }

[lints.rust]
unused = "allow"
