[package]
name = "JustAMailClient"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-imap = "0.11.2"
async-native-tls = { version = "0.6.0", default-features = false, features = [ "runtime-tokio" ] }
async-trait = "0.1.89"
bitflags = "2.13.0"
directories = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.32"
imap-proto = "0.16.7"
lettre = { version = "0.11.22", features = ["tokio1", "tokio1-native-tls", "builder"] }
mailparse = "0.16.1"
rfc2047-decoder = "1.1.2"
serde = "1.0.228"
serde_json = { version = "1.0.150", features = ["raw_value"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
stop-token = "0.7.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
phf = { version = "0.11", features = ["macros"] }

[lints.rust]
unused = "allow"
